--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,16 +16,16 @@ services:
 
     # makes classes in src/AppBundle available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    AppBundle\:
-        resource: '../../src/AppBundle/*'
+    BddBundle\:
+        resource: '../../src/BddBundle/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../../src/AppBundle/{Entity,Repository}'
+        exclude: '../../src/BddBundle/{Entity,Repository,Tests}'
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
-    AppBundle\Controller\:
-        resource: '../../src/AppBundle/Controller'
+    BddBundle\Controller\:
+        resource: '../../src/BddBundle/Controller'
         public: true
         tags: ['controller.service_arguments']
 
