--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,12 +3,18 @@ fos_js_routing:
 
 _liip_imagine:
     resource: "@LiipImagineBundle/Resources/config/routing.xml"
+root:
+    path: "/"
+    defaults:
+        _controller: FrameworkBundle:Redirect:urlRedirect
+        path: /%locale%/
+        permanent: true
 
 bdd:
     resource: "@BddBundle/Controller/"
     type:     annotation
     prefix:   /{_locale}
     requirements:
-        _locale: 'fr'
+        _locale: "fr"
     defaults:
-        _locale: 'fr'
+        _locale: "fr"
