--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -73,7 +73,7 @@ liip_imagine:
     loaders:
         default:
             filesystem:
-                data_root: "/Users/florian/Sites/backup/cw-legacy"
+                data_root: '%base_path_images%'
     resolvers:
           default:
               web_path: ~
