--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -26,13 +26,13 @@ framework:
     trusted_hosts: ~
     session:
         # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-        handler_id: session.handler.native_file
-        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
+        handler_id: ~
     fragments: ~
     http_method_override: true
     assets: ~
     php_errors:
         log: true
+    ide: 'phpstorm'
 
 # Twig Configuration
 twig:
