--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ parameters:
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -83,3 +83,30 @@ liip_imagine:
               quality: 75
               filters:
                   thumbnail: { size: [200, 150], mode: outbound }
+
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: BddBundle\Entity\User
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
+
+hwi_oauth:
+    connect:
+        account_connector: my.custom.user_provider
+    fosub:
+        username_iterations: 30
+        properties:
+            facebook:    facebookId
+    firewall_names: [main]
+    resource_owners:
+            facebook:
+                type:           'facebook'
+                client_id:      '%facebook_client_id%'
+                client_secret:  '%facebook_client_secret%'
+                infos_url:      'https://graph.facebook.com/me?fields=id,name,email,first_name,last_name,picture'
+                scope:          ''
+                options:
+                    display: popup
+                    auth_type: rerequest
