--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,30 @@
+#fos_user:
+#    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+hwi_oauth_redirect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
+    prefix:   /connect
+
+hwi_oauth_connect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/connect.xml"
+    prefix:   /connect
+
+hwi_oauth_login:
+    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+    prefix:   /login
+
+facebook_login:
+    path: /login/check-facebook
+
+logout:
+    path: /logout
+
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
 _liip_imagine:
     resource: "@LiipImagineBundle/Resources/config/routing.xml"
+
 root:
     path: "/"
     defaults:
