add rating system

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,6 +37,9 @@ services:
         arguments: ['%base_path_images%', '%base_url_images%']
         public: true
 
+    BddBundle\Service\RatingService:
+        public: true
+
     my.custom.user_provider:
         class: BddBundle\Security\Core\User\CustomUserProvider
         arguments: ['@fos_user.user_manager', {facebook: facebookId}]
