--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,9 +24,10 @@ security:
             oauth:
                 resource_owners:
                     facebook:      "/login/check-facebook"
-                login_path:        /login
+                # A améliorer
+                login_path:        /fr/login
                 use_forward:       false
-                failure_path:      /login
+                failure_path:      /fr/login
                 oauth_user_provider:
                     service: my.custom.user_provider
             logout:
