--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,6 +15,9 @@ parameters:
     mailer_user: ~
     mailer_password: ~
 
+    mail_from:
+    mail_from_name:
+
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
 
