add timestamps on coaster ratings

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -110,3 +110,9 @@ hwi_oauth:
                 options:
                     display: popup
                     auth_type: rerequest
+
+stof_doctrine_extensions:
+    default_locale: fr_FR
+    orm:
+        default:
+            timestampable: true
