top ten without styling

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -118,3 +118,4 @@ stof_doctrine_extensions:
         default:
             timestampable: true
             sluggable: true
+            sortable: true
