--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -126,3 +126,14 @@ stof_doctrine_extensions:
             timestampable: true
             sluggable: true
             sortable: true
+
+knp_paginator:
+    page_range: 20                      # default page range used in pagination control
+    default_options:
+        page_name: page                # page query parameter name
+        sort_field_name: sort          # sort field query parameter name
+        sort_direction_name: direction # sort direction query parameter name
+        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
+    template:
+        pagination: 'KnpPaginatorBundle:Pagination:sliding.html.twig'     # sliding pagination controls template
+        sortable: 'KnpPaginatorBundle:Pagination:sortable_link.html.twig' # sort link template
