--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "friendsofsymfony/user-bundle": "~2.0",
         "hwi/oauth-bundle": "^0.5.3",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-paginator-bundle": "^2.6",
         "liip/imagine-bundle": "^1.8",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
