--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,7 +7,8 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: fr
+    locale: 'fr'
+    app.locales: 'fr|en'
 
 framework:
     #esi: ~
