--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
+        "tackk/cartographer": "^1.1",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
