--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CoastersWorld",
-  "name": "BDD Coasters World",
+  "short_name": "CaptainCoaster",
+  "name": "Captain Coaster",
   "icons": [
     {
       "src": "apple-touch-icon-144x144.png",
