fix custom mail + favicon

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,12 +3,12 @@
   "name": "Captain Coaster",
   "icons": [
     {
-      "src": "apple-touch-icon-144x144.png",
+      "src": "favicon-144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "apple-touch-icon-152x152.png",
+      "src": "favicon-152x152.png",
       "type": "image/png",
       "sizes": "152x152"
     }
