--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "hwi/oauth-bundle": "^0.5.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.6",
+        "knplabs/knp-time-bundle": "^1.7",
         "liip/imagine-bundle": "^1.8",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
