add google oauth authentication

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,6 +26,9 @@ hwi_oauth_login:
 facebook_login:
     path: /login/check-facebook
 
+google_login:
+    path: /login/check-google
+
 logout:
     path: /logout
 
