--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -107,22 +107,27 @@ hwi_oauth:
     fosub:
         username_iterations: 30
         properties:
-            facebook:    facebookId
+            facebook:   facebookId
+            google:     googleId
     firewall_names: [main]
     resource_owners:
-            facebook:
-                type:           'facebook'
-                client_id:      '%facebook_client_id%'
-                client_secret:  '%facebook_client_secret%'
-                infos_url:      'https://graph.facebook.com/me?fields=id,name,email,first_name,last_name,picture'
-                scope:          'email'
-                options:
-                    display: popup
-                    auth_type: rerequest
-                paths:
-                    email:          email
-                    profilepicture: picture.data.url
-    #target_path_parameter: _destination
+        facebook:
+            type:           'facebook'
+            client_id:      '%facebook_client_id%'
+            client_secret:  '%facebook_client_secret%'
+            infos_url:      'https://graph.facebook.com/me?fields=id,name,email,first_name,last_name,picture'
+            scope:          'email'
+            options:
+                display: popup
+                auth_type: rerequest
+            paths:
+                email:          email
+                profilepicture: picture.data.url
+        google:
+            type:                'google'
+            client_id:           '%google_client_id%'
+            client_secret:       '%google_client_secret%'
+            scope:               "email profile"
 
 stof_doctrine_extensions:
     default_locale: fr_FR
