--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -42,4 +42,4 @@ services:
 
     my.custom.user_provider:
         class: BddBundle\Security\Core\User\CustomUserProvider
-        arguments: ['@fos_user.user_manager', {facebook: facebookId}]
+        arguments: ['@fos_user.user_manager', {facebook: facebookId, google: googleId}]
