--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -31,3 +31,5 @@ parameters:
     # User / Authentication
     facebook_client_id:
     facebook_client_secret:
+    google_client_id:
+    google_client_secret:
