--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,6 +17,7 @@ parameters:
 
     mail_from:
     mail_from_name:
+    mail_to:
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
