--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,7 +30,8 @@ framework:
         handler_id: ~
     fragments: ~
     http_method_override: true
-    assets: ~
+    assets:
+        json_manifest_path: '%kernel.project_dir%/web/build/manifest.json'
     php_errors:
         log: true
     ide: 'phpstorm'
