add ranking service and command

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -46,6 +46,9 @@ services:
     BddBundle\Service\NotificationService:
         public: true
 
+    BddBundle\Service\RankingService:
+        public: true
+
     my.custom.user_provider:
         class: BddBundle\Security\Core\User\CustomUserProvider
         arguments: ['@fos_user.user_manager', {facebook: facebookId, google: googleId}]
