add kiddie field + listener

--- a/src/BddBundle/Resources/config/services.yml
+++ b/src/BddBundle/Resources/config/services.yml
@@ -1,2 +1,7 @@
 services:
+    doctrine.coaster_listener:
+            class: BddBundle\Doctrine\BuiltCoasterListener
+            tags:
+                - { name: doctrine.event_listener, event: prePersist }
+                - { name: doctrine.event_listener, event: preUpdate }
 
