add stat service

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -49,6 +49,9 @@ services:
     BddBundle\Service\RankingService:
         public: true
 
+    BddBundle\Service\StatService:
+        public: true
+
     my.custom.user_provider:
         class: BddBundle\Security\Core\User\CustomUserProvider
         arguments: ['@fos_user.user_manager', {facebook: facebookId, google: googleId}]
