--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -36,10 +36,15 @@ services:
     BddBundle\Service\ImageService:
         arguments: ['%base_path_images%', '%base_url_images%']
 
+    BddBundle\Service\ReportCoverUploader:
+        arguments:
+            $targetDir: '%report_cover_directory%'
+
+    BddBundle\Service\ReportImageUploader:
+        arguments:
+            $targetDir: '%report_image_directory%'
+
     my.custom.user_provider:
         class: BddBundle\Security\Core\User\CustomUserProvider
         arguments: ['@fos_user.user_manager', {facebook: facebookId, google: googleId}]
 
-    BddBundle\Service\FileUploader:
-        arguments:
-            $targetDir: '%report_images_directory%'
