--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -8,7 +8,7 @@ _profiler:
 
 _errors:
     resource: '@TwigBundle/Resources/config/routing/errors.xml'
-    prefix: /_error
+    prefix: /{_locale}/_error
 
 _main:
     resource: routing.yml
