--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -85,7 +85,7 @@ liip_imagine:
                 data_root: '%base_path_images%'
         report_cover:
             filesystem:
-                data_root: '%report_image_directory%'
+                data_root: '%report_cover_directory%'
     resolvers:
         default:
             web_path: ~
