--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -50,3 +50,6 @@ services:
         class: BddBundle\Security\Core\User\CustomUserProvider
         arguments: ['@fos_user.user_manager', {facebook: facebookId, google: googleId}]
 
+    \HTMLPurifier:
+        class: \HTMLPurifier
+        public: true
