--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
+/web/images/banners/*
+!/web/images/banners/.gitkeep
 /.idea/
 /web/media/
 /web/photo
