--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,8 +11,9 @@ parameters:
     # todo: merge both params ?
     # used in routing
     app.locales: 'en|fr|es'
-    # used for templating
+    # used for templating and sitemap
     app.locales.array: ['en', 'fr', 'es']
+#    container.autowiring.strict_mode: true
 
 framework:
     #esi: ~
