--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -59,8 +59,7 @@ services:
         class: BddBundle\Security\Core\User\CustomUserProvider
         arguments: ['@fos_user.user_manager', {facebook: facebookId, google: googleId}]
 
-    Twig_Extensions_Extension_Intl:
-        class: Twig_Extensions_Extension_Intl
+    Twig\Extensions\IntlExtension:
         tags: [twig.extension]
 
     \HTMLPurifier:
