--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -40,3 +40,6 @@ security:
                 path:   /logout
                 target: /
             logout_on_user_change: true
+
+    access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN }
