--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -37,5 +37,5 @@ monolog:
         #    type: chromephp
         #    level: info
 
-#swiftmailer:
-#    delivery_addresses: ['me@example.com']
+swiftmailer:
+    disable_delivery: true
