--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -2,6 +2,10 @@
 # Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
 # http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
+    # Router
+    context_host:
+    context_scheme: 'https'
+
     # Database
     database_host: 127.0.0.1
     database_port: ~
