--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,7 +1,8 @@
 # Learn more about services, parameters and containers at
 # http://symfony.com/doc/current/service_container.html
 parameters:
-    #parameter_name: value
+    router.request_context.host: '%context_host%'
+    router.request_context.scheme: '%context_scheme%'
 
 services:
     # default configuration for services in *this* file
