refact rating & top commands

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -53,3 +53,8 @@ services:
 
     Twig\Extensions\IntlExtension:
         tags: [twig.extension]
+
+    BddBundle\Doctrine\BuiltCoasterListener:
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
+            - { name: doctrine.event_listener, event: preUpdate }
